cluster/mysql-adminer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-adminer-ingress
  namespace: mysql
  labels:
    app: mysql-adminer
    app.kubernetes.io/name: mysql-adminer
    app.kubernetes.io/part-of: platform
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mysql-adminer.host.placeholder
      secretName: mysql-adminer-tls
  rules:
    - host: mysql-adminer.host.placeholder # Overridden by environment overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysql-adminer
                port:
                  number: 80
